# NetWatch

./: .gitattributes  .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/: desktop.css  globals.css  page.loss-rate.test.mjs  page.tsx
service/: README.md  chart_history.go  chart_history_test.go  go.mod  hub.go  hub_test.go  latency_spike.go  latency_spike_test.go  lifecycle.go  lifecycle_test.go  main.go  main_test.go  model.go  model_test.go  monitor.go  monitor_test.go  network_interfaces.go  network_interfaces_darwin.go  network_interfaces_test.go  network_interfaces_unsupported.go  network_interfaces_windows.go  network_interfaces_windows_test.go  probe.go  probe_test.go  proxy_probe.go  proxy_probe_test.go  ring.go  server.go  server_test.go  store.go  store_test.go  web.go
service/web/: index.html
service/web/assets/: index-B5b3gM4I.css  index-BDbCbzGh.js  index-BnB6_U64.css  index-Bpr-nhLG.js  index-BtcbmpCc.js  index-DrfATJ9m.js  index-xS00npvm.css
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop_window.rs  lib.rs  main.rs  sidecar.rs  state.rs  tray.rs
