[package]
name = "netwatch-desktop"
version = "0.4.0"
description = "链路哨兵桌面应用"
authors = ["NetWatch contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "netwatch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "NetWatch"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_ProcessStatus", "Win32_System_Threading"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
